# RaumBet-UEB2

./: .gitignore  2.1_Sonate  CMakeLists.txt  README.md  d.gp  main.cpp  plot.gp  tle.txt
Brandner_Brunklaus_Geissler_Schlesiger/: 2.1_Test_Case  README  c  coordinates.cpp  coordinates.h  d  main.cpp  sonate2_100min_orbit.csv  timeDate.cpp  tle.txt
Brandner_Brunklaus_Geissler_Schlesiger/math/: matlib.cpp
helper/: mathhelper.cpp  mathhelper.h
math/: matlib.h
sgp4/: SGP4Propagator.cpp  SGP4Propagator.h  coordinates.cpp  coordinates.h  timeDate.cpp  timeDate.h
sub_sat_point/: ssp.cpp  ssp.h  ssp_round_earth.h
tle/: tle.cpp  tle.h  tlereader.cpp  tlereader.h
